[workspace]
resolver = "2"
members = ["devtool", "macros", "injector", "loader", "rpc", "cef-sys", "llrt", "hlrt"]
default-members = ["devtool"]

[workspace.dependencies]
# members
cef-sys = { path = "cef-sys" }
grebuloff-macros = { path = "macros" }
grebuloff-rpc = { path = "rpc" }

# general deps
dll-syringe = { version = "0.15.2", default-features = false }
tokio = { version = "1.28.2", features = ["full"] }
anyhow = { version = "1.0.71" }
log = { version = "0.4" }
fern = { version = "0.6.2" }
chrono = { version = "0.4.26" }
rmp = "0.8.11"
rmp-serde = "1.1.1"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.96"
bytes = "1.4.0"

[workspace.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Security_Authorization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D"
]
