[package]
name = "cef-sys"
edition = "2021"
build = "build.rs"

# devtool uses this to determine the CEF version to download,
# so it must always be in sync with the CEF build version,
# with `+chromium` replaced with `.chromium` to be semver-compliant
version = "114.2.11+g87c8807.chromium-114.0.5735.134"

[dependencies]
