[package]
name = "grebuloff-runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
ffxivclientstructs = { path = "../deps/FFXIVClientStructs/rust" }
dll-syringe = { version = "0.15.2", default-features = false, features = ["payload-utils"] }
msgbox = "0.7.0"
log = "0.4"
fern = "0.6.2"
chrono = "0.4.26"
tokio = { version = "1.28.2", features = ["net", "rt", "rt-multi-thread", "time"] }
rmp = "0.8.11"
rmp-serde = "1.1.1"
serde = { version = "1.0.163", features = ["derive"] }
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
webview2-com = "0.25.0"
serde_json = "1.0.96"
deno_core = "0.189.0"
anyhow = "1.0.71"
include_dir = "0.7.3"

[build-dependencies]
vergen = { version = "8.2.1", features = ["build", "git", "gitcl"] }
