[package]
name = "grebuloff-hlrt-native"
version = "0.1.0"
edition = "2021"
exclude = ["*.node"]

[lib]
crate-type = ["cdylib"]
path = "src/main/native/lib.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "promise-api", "task-api", "channel-api"]
