[package]
name = "grebuloff-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
dll-syringe = "0.15.2"
sysinfo = "0.29.0"
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_Security_Authorization", "Win32_UI_WindowsAndMessaging"] }
